# StubgenBug

./: pyproject.toml
src/tmp_dmnkkm8uuq/: __init__.py
